# Labyrinth-Irrlicht

./: CMakeLists.txt  README.md
data/: positionEnemy  positionEnemyGimp
include/: events.h  scene.h  skeleton.h
src/: events.cpp  main.cpp  scene.cpp  skeleton.cpp
