cmake_minimum_required(VERSION 2.6)
PROJECT(Labyrinth-Irrlicht)

SET(CMAKE_CXX_FLAGS_RELEASE "-O3")
SET(CMAKE_CXX_FLAGS_DEBUG  "g")
SET(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O3 -g")

IF(NOT CMAKE_CONFIGURATION_TYPES AND NOT CMAKE_BUILD_TYPE)
	SET(CMAKE_BUILD_TYPE RelWithDebInfo)
ENDIF(NOT CMAKE_CONFIGURATION_TYPES AND NOT CMAKE_BUILD_TYPE)

IF(CMAKE_CXX_FLAGS_DEBUG)
	SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/debug)
ELSE(CMAKE_CXX_FLAGS_DEBUG)
	SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/)
ENDIF(CMAKE_CXX_FLAGS_DEBUG)

FIND_PACKAGE(X11)
FIND_PACKAGE(OpenGL)

INCLUDE_DIRECTORIES(
	"/usr/local/include/"
	${X11_INCLUDE_DIR}
	${OPENGL_INCLUDE_DIR}
	)

FILE(GLOB SRCS src/*.cpp)
#FILE(GLOB HDRS include/*.h)

LINK_DIRECTORIES(
	"/usr/lib/"
	)
ADD_EXECUTABLE(Labyrinth-Irrlicht 
	${SRCS}
	#${HDRS}
	)

TARGET_LINK_LIBRARIES(Labyrinth-Irrlicht
	${X11_LIBRARIES}
	Xxf86vm
	${OPENGL_LIBRARIES}
	"/usr/local/lib/libIrrlicht.a"
	)
